# simple_bootloader

./: Cargo.toml  Introduction.md  Makefile  README.md  makeimage.sh  rust-toolchain  x86_64-diyos.json
.cargo/: config
bootloader/: Cargo.toml  Makefile  build.rs  x86_64-bootloader.json
bootloader/.cargo/: config
bootloader/src/: main.rs
bootloader/src/boot/: bloglinker.ld  boot.asm  e820.asm  linker.ld  pure.asm  stage1.asm  stage2.asm  stage3.asm
src/: main.rs  vga_buffer.rs
src/entry/: entry.asm  linker64.ld
