[package]
name = "diyos"
version = "0.1.0"
authors = ["GCYYfun <734536637@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.1.1", features = ["spin_no_std"] }
spin = "0.5.2"
volatile = "0.2.6"