[package]
name = "bootloader"
version = "0.1.0"
authors = ["GCYYfun <734536637@qq.com>"]
edition = "2018"
build   = "build.rs" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]          # 未知作用、之后调查
name = "bootloader"
required-features = ["binary"]

[dependencies]
xmas-elf = { version = "0.6.2", optional = true }           # 未知作用、之后调查
x86_64 = { version = "0.8.3", optional = true }
usize_conversions = { version = "0.2.0", optional = true }  # 未知作用、之后调查
fixedvec = { version = "0.2.4", optional = true }           # 未知作用、之后调查
bit_field = { version = "0.10.0", optional = true }         # 未知作用、之后调查

[build-dependencies]
llvm-tools = { version = "0.1", optional = true }
toml = { version = "0.5.1", optional = true }

[features]
default = []
binary = ["xmas-elf", "x86_64", "usize_conversions", "fixedvec", "llvm-tools", "toml"]
map_physical_memory = []

[package.metadata.bootloader]
target = "x86_64-bootloader.json"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = false
debug = true

[package.metadata.docs.rs]
features = [ "recursive_page_table", "map_physical_memory" ]
default-target = "x86_64-unknown-linux-gnu"
